# Qwen3-TTS-Mac-GeneLab

./: .gitignore  =4.0  README.md  README_EN.md  pyproject.toml  requirements-mac.txt  run.sh  setup_mac.sh
docs/: README_DE.md  README_ES.md  README_FR.md  README_IT.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  README_ZH.md  privacy-policy.html  support.html
examples/: mac_quickstart.py
mac/: __init__.py  benchmark.py  device_utils.py  engine.py  memory_manager.py  whisper_transcriber.py
packaging/: Makefile  README.md
packaging/phase1/: build.sh  launcher.py  model_manager.py  setup_py2app.py  sign_and_dmg.sh
packaging/phase2/YujieTTS/: MAC_APP_STORE_上架步骤表.md  prepare_bootstrap_resources.sh  project.yml  regenerate_xcodeproj.sh  自测清单.md
packaging/phase2/YujieTTS/YujieTTS/: App.swift  Info.plist
packaging/phase2/YujieTTS/YujieTTS.xcodeproj/: project.pbxproj
packaging/phase2/YujieTTS/YujieTTS/Resources/bootstrap/: README.txt
packaging/phase2/YujieTTS/YujieTTS/Resources/default-voices/: yujie.json
packaging/phase2/YujieTTS/YujieTTS/Services/: AudioService.swift  EngineService.swift  EnvironmentManager.swift  GenerationHistoryStore.swift  ProcessManager.swift  PurchaseManager.swift  VoiceLibraryStore.swift
packaging/phase2/YujieTTS/YujieTTS/Views/: BootstrapView.swift  HistoryView.swift  MainView.swift  PaywallView.swift  PlaybackBar.swift  SettingsView.swift  TextInputView.swift  VoiceConfigPanel.swift
packaging/phase2/scripts/: build_env_pack.sh  build_sidecar.sh  engine_server.py  sign_python_env_for_appstore.sh
ui/: __init__.py  app.py  i18n_utils.py
ui/components/: __init__.py  custom_voice_tab.py  settings_tab.py  voice_clone_tab.py  voice_design_tab.py
ui/i18n/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
